--- a/index.html
+++ b/index.html
@@ -43,14 +43,12 @@
                     <div class="settings-section-label">Theme</div>
                     <div class="settings-option" onclick="themes.changeTheme('jr16')"><span class="theme-icon">🌿</span>
                         JR-16</div>
-                    <div class="settings-option" onclick="themes.changeTheme('ambre')"><span
-                            class="theme-icon">🔥</span> Ambre Chaud</div>
-                    <div class="settings-option" onclick="themes.changeTheme('naples')"><span
-                            class="theme-icon">☀️</span> Naples Yellow</div>
                     <div class="settings-option" onclick="themes.changeTheme('beton')"><span
                             class="theme-icon">🌫️</span> Béton</div>
                     <div class="settings-option" onclick="themes.changeTheme('ciment')"><span
                             class="theme-icon">🪨</span> Ciment</div>
+                    <div class="settings-option" onclick="themes.changeTheme('bubblegum')"><span
+                            class="theme-icon">🍬</span> Bubble Gum</div>
                     <div class="settings-divider"></div>
                     <div class="settings-section-label">Language</div>
                     <div class="settings-option" onclick="i18n.changeLang('en')"><span class="lang-flag">🇬🇧🇨🇦</span>
