everything is done

--- a/edit.html
+++ b/edit.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>EDIT ITEM - ALEX-CONTROL-PANEL V1.0</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="admin.css">
     <link rel="stylesheet" href="fonts.css">
 </head>
 
